	* apps/netutils/ftpd:  Add an FTPD server (does not even compile on initial
	  checkin).
	* apps/examples/ftpd:  Add a test for the FTPD server (untest on initial
	  check-in).
	* apps/nshlib/nsh_fscmds.c:  Add support for a 'dmesg' command that will
	  dump the system log if CONFIG_SYSLOG is selected.

6.16 2012-03-10 Gregory Nutt <gnutt@nuttx.org>

	* apps/examples/qencoder:  Add a quadrature driver test.
	* apps/examples/ostest/fpu.c:  Add a test to verify that FPU registers
	  are properly saved and restored on context switches.
	* apps/system/readline/readline.c:  readline() will now treat either a
	  backspace or a DEL character as a backspace (i.e., deleting the character
	  to the left of the cursor).  This makes NSH less dependent on particular
	  keyboard mappings of the Backspace key.  Submitted by Mike Smith.
	* apps/examples/cdcacm:  An example that illustrates how the CDC/ACM driver
	  may to connected and disconnected through software control.
	* apps/examples/nsh/nsh_main.c:  If available, call up_cxxinitialize() to
	  initialize all statically defined C++ classes.
	* apps/nshlib:  Now supports a USB serial device for NSH console I/O.  This
	  allows NSH to be used on boards that have USB but no serial connectors.

6.17 2012-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* apps/examples/can:  Add conditional compilation so that the test can be
	  configured to only send messages or to only receive messages.  This will
	  let the test work in other modes than simple loopback testing.
	* apps/examples/hello and apps/examples/ostest:  Can now be built as NSH
	  built-int functions.
	* vsn/hello:  Removed.  The modified apps/examples/hello is enough "Hello,
	  World!"
	* apps/examples/nxconsole:  Add a test of the NX console device.
	* apps/examples/nxconsole:  The NX console example now supports running
	  the NuttShell (NSH) within an NX window.
	* apps/system/readline:  Now uses standard definitions from
	  include/nuttx/ascii.h and vt100.h