@@ -251,6 +251,18 @@ BIN		= nuttx$(EXEEXT)
 all: $(BIN)
 .PHONY: context clean_context check_context export subdir_clean clean subdir_distclean distclean apps_clean apps_distclean
 
+# Targets used to copy include/nuttx/math.h.  If CONFIG_ARCH_MATH_H is
+# defined, then there is an architecture specific math.h header file
+# that will be included indirectly from include/math.h.  But first, we
+# have to copy math.h from include/nuttx/. to include/.
+
+ifeq ($(CONFIG_ARCH_MATH_H),y)
+include/math.h: include/nuttx/math.h
+	@cp -f include/nuttx/math.h include/math.h
+else
+include/math.h:
+endif
+
 # Targets used to build include/nuttx/version.h.  Creation of version.h is
 # part of the overall NuttX configuration sequency.  Notice that the
 # tools/mkversion tool is cuilt and used to create include/nuttx/version.h
@@ -331,7 +343,7 @@ dirlinks: include/arch include/arch/board include/arch/chip $(ARCH_SRC)/board $(
 # the config.h and version.h header files in the include/nuttx directory and
 # the establishment of symbolic links to configured directories.
 
-context: check_context include/nuttx/config.h include/nuttx/version.h dirlinks
+context: check_context include/nuttx/config.h include/nuttx/version.h include/math.h dirlinks
 	@for dir in $(CONTEXTDIRS) ; do \
 		$(MAKE) -C $$dir TOPDIR="$(TOPDIR)" context; \
 	done
@@ -343,6 +355,8 @@ context: check_context include/nuttx/config.h include/nuttx/version.h dirlinks
 
 clean_context:
 	@rm -f include/nuttx/config.h
+	@rm -f include/nuttx/version.h
+	@rm -f include/math.h
 	@$(DIRUNLINK) include/arch/board
 	@$(DIRUNLINK) include/arch/chip
 	@$(DIRUNLINK) include/arch
